--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -4,16 +4,34 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clickable="true"
-    android:background="@color/colorPrimary">
+    android:background="@drawable/bg_app">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp_10"
         >
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_toLeftOf="@+id/imgRushLogo"
+            android:layout_height="wrap_content"
+            android:src="@drawable/arrow"/>
+        <ImageView
+            android:id="@+id/imgRushLogo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginLeft="@dimen/dp_20"
+            android:layout_marginRight="@dimen/dp_30"
+            android:src="@drawable/logo_signup"/>
         <LinearLayout
             android:id="@+id/linearRegistration"
             android:layout_width="match_parent"
+            android:layout_below="@+id/imgRushLogo"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/dp_30"
+            android:layout_marginRight="@dimen/dp_30"
             android:layout_marginTop="@dimen/dp_20"
             android:orientation="vertical">
             <de.hdodenhof.circleimageview.CircleImageView
@@ -26,160 +44,61 @@
                 android:src="@drawable/default_profile_photo"
                 app:civ_border_color="@color/civ_border"/>
 
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/dp_40"
-                android:layout_marginRight="@dimen/dp_40"
-                android:layout_marginTop="@dimen/dp_20"
-                android:padding="@dimen/dp_5"
-                android:background="@drawable/bg_edittext_shape">
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="@dimen/dp_2"
-                    android:layout_gravity="center_vertical"
-                    android:src="@drawable/ic_audiotrack"/>
-                <View
-                    android:layout_width="2dp"
-                    android:layout_height="match_parent"
-                    android:background="@android:color/white"/>
-
                 <EditText
 
-                    android:layout_width="match_parent"
+                    android:layout_marginTop="@dimen/dp_20"
                     android:id="@+id/frEdtname"
-                    android:layout_height="wrap_content"
                     android:inputType="text|textNoSuggestions"
-                    android:padding="@dimen/dp_5"
-                    android:textSize="@dimen/sp_16"
-                    android:textStyle="bold|italic"
+                    android:drawableLeft="@drawable/ic_name"
                     android:hint="@string/str_fullname"
-                    android:textColorHint="@android:color/white"
-                    android:textColor="@android:color/white"
-                    android:layout_marginLeft="@dimen/dp_2"
-                    android:background="@android:color/transparent"></EditText>
-
-                </LinearLayout>
-
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/dp_40"
-                android:layout_marginRight="@dimen/dp_40"
-                android:layout_marginTop="@dimen/dp_10"
-                android:padding="@dimen/dp_5"
-                android:background="@drawable/bg_edittext_shape">
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="@dimen/dp_2"
-                    android:layout_gravity="center_vertical"
-                    android:src="@drawable/ic_audiotrack"/>
-                <View
-                    android:layout_width="2dp"
-                    android:layout_height="match_parent"
-                    android:background="@android:color/white"/>
+                    style="@style/AppTheme.Input"></EditText>
 
                 <EditText
 
-                    android:layout_width="match_parent"
+                    android:layout_marginTop="@dimen/dp_10"
                     android:id="@+id/frEdtPassword"
+                    android:drawableLeft="@drawable/ic_pass"
                     android:inputType="textWebPassword|textNoSuggestions"
-                    android:layout_height="wrap_content"
-                    android:padding="@dimen/dp_5"
-                    android:textSize="@dimen/sp_16"
                     android:hint="@string/str_password"
-                    android:textStyle="bold|italic"
-                    android:textColorHint="@android:color/white"
-                    android:textColor="@android:color/white"
-                    android:layout_marginLeft="@dimen/dp_2"
-                    android:background="@android:color/transparent"></EditText>
-
-            </LinearLayout>
+                    style="@style/AppTheme.Input"></EditText>
 
 
 
 
 
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/dp_40"
-                android:layout_marginRight="@dimen/dp_40"
-                android:layout_marginTop="@dimen/dp_10"
-                android:padding="@dimen/dp_5"
-                android:background="@drawable/bg_edittext_shape">
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="@dimen/dp_2"
-                    android:layout_gravity="center_vertical"
-                    android:src="@drawable/ic_audiotrack"/>
-                <View
-                    android:layout_width="2dp"
-                    android:layout_height="match_parent"
-                    android:background="@android:color/white"/>
+
+
+
 
                 <EditText
-
-                    android:layout_width="match_parent"
+                    android:layout_marginTop="@dimen/dp_10"
                     android:id="@+id/frEdtEmail"
+                    android:drawableLeft="@drawable/ic_email"
                     android:inputType="textEmailAddress|textNoSuggestions"
-                    android:layout_height="wrap_content"
-                    android:padding="@dimen/dp_5"
-                    android:textSize="@dimen/sp_16"
+
                     android:hint="@string/str_email"
-                    android:textStyle="bold|italic"
-                    android:textColor="@android:color/white"
-                    android:textColorHint="@android:color/white"
-                    android:layout_marginLeft="@dimen/dp_2"
-                    android:background="@android:color/transparent"></EditText>
 
-            </LinearLayout>
+                    style="@style/AppTheme.Input"></EditText>
 
 
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/dp_40"
-                android:layout_marginRight="@dimen/dp_40"
-                android:layout_marginTop="@dimen/dp_10"
 
-                android:padding="@dimen/dp_5"
-                android:background="@drawable/bg_edittext_shape">
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="@dimen/dp_2"
-                    android:layout_gravity="center_vertical"
-                    android:src="@drawable/ic_audiotrack"/>
-                <View
-                    android:layout_width="2dp"
-                    android:layout_height="match_parent"
-                    android:background="@android:color/white"/>
+
+
 
                 <EditText
 
-                    android:layout_width="match_parent"
+                    android:layout_marginTop="@dimen/dp_10"
                     android:id="@+id/frEdtPhone"
-                    android:inputType="phone|textNoSuggestions"
-                    android:layout_height="wrap_content"
-                    android:padding="@dimen/dp_5"
-                    android:hint="@string/str_phone"
-                    android:textSize="@dimen/sp_16"
-                    android:textStyle="bold|italic"
-                    android:textColorHint="@android:color/white"
-                    android:textColor="@android:color/white"
-                    android:layout_marginLeft="@dimen/dp_2"
-                    android:background="@android:color/transparent"></EditText>
 
-            </LinearLayout>
+                    android:drawableLeft="@drawable/ic_phone"
+                    android:inputType="phone|textNoSuggestions"
+
+                    android:hint="@string/str_phone"
+
+                    style="@style/AppTheme.Input"></EditText>
+
 
 
             <Button
@@ -187,9 +106,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dp_20"
-                android:layout_marginLeft="@dimen/dp_40"
+
                 android:text="@string/str_create_account"
-                android:layout_marginRight="@dimen/dp_40"
+
                 style="@style/AppTheme.Button"/>
 
             <TextView
@@ -205,8 +124,8 @@
 
 
 
-            </LinearLayout>
 
+</LinearLayout>
 
         <Button
             android:id="@+id/frBtnFacebook"
@@ -216,9 +135,9 @@
             android:layout_marginLeft="@dimen/dp_40"
             android:layout_marginBottom="@dimen/dp_20"
             android:layout_alignParentLeft="true"
-            android:text="@string/str_facebook"
+
             android:layout_below="@+id/linearRegistration"
-            style="@style/AppTheme.Button"/>
+            android:background="@drawable/fb_bg"/>
 
         <Button
             android:id="@+id/frBtnGoogle"
@@ -228,9 +147,9 @@
             android:layout_marginTop="@dimen/dp_10"
             android:layout_marginRight="@dimen/dp_40"
             android:layout_alignParentRight="true"
-            android:text="@string/str_google"
+
             android:layout_below="@+id/linearRegistration"
-            style="@style/AppTheme.Button"/>
+            android:background="@drawable/google_bg"/>
 
         </RelativeLayout>
 
