--- a/app/src/main/res/layout/fragment_update_account.xml
+++ b/app/src/main/res/layout/fragment_update_account.xml
@@ -1,98 +1,78 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_vertical"
     android:orientation="vertical"
     android:clickable="true"
-    android:background="@color/colorPrimary"
+
+    android:background="@drawable/bg_app"
     tools:context="com.hoffmans.rush.ui.fragments.UpdateAccountFragment">
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/dp_40"
-        android:layout_marginRight="@dimen/dp_40"
-        android:layout_marginTop="@dimen/dp_10"
-        android:padding="@dimen/dp_5"
-        android:background="@drawable/bg_edittext_shape">
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/dp_2"
-            android:layout_gravity="center_vertical"
-            android:src="@drawable/ic_audiotrack"/>
-        <View
-            android:layout_width="2dp"
-            android:layout_height="match_parent"
-            android:background="@android:color/white"/>
-
-        <EditText
-
-            android:layout_width="match_parent"
-            android:id="@+id/fuEdtEmail"
-            android:inputType="textEmailAddress|textNoSuggestions"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/dp_5"
-            android:textSize="@dimen/sp_16"
-            android:hint="@string/str_email"
-            android:textStyle="bold|italic"
-            android:textColor="@android:color/white"
-            android:textColorHint="@android:color/white"
-            android:layout_marginLeft="@dimen/dp_2"
-            android:background="@android:color/transparent"></EditText>
-
-    </LinearLayout>
-
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/dp_40"
-        android:layout_marginRight="@dimen/dp_40"
-        android:layout_marginTop="@dimen/dp_10"
-
-        android:padding="@dimen/dp_5"
-        android:background="@drawable/bg_edittext_shape">
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/dp_2"
-            android:layout_gravity="center_vertical"
-            android:src="@drawable/ic_audiotrack"/>
-        <View
-            android:layout_width="2dp"
-            android:layout_height="match_parent"
-            android:background="@android:color/white"/>
-
-        <EditText
-
-            android:layout_width="match_parent"
-            android:id="@+id/fuEdtPhone"
-            android:inputType="phone|textNoSuggestions"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/dp_5"
-            android:hint="@string/str_phone"
-            android:textSize="@dimen/sp_16"
-            android:textStyle="bold|italic"
-            android:textColorHint="@android:color/white"
-            android:textColor="@android:color/white"
-            android:layout_marginLeft="@dimen/dp_2"
-            android:background="@android:color/transparent"></EditText>
-
-    </LinearLayout>
-
-
-    <Button
-        android:id="@+id/fuSaveDetails"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+    <ImageView
+        android:layout_width="wrap_content"
         android:layout_marginTop="@dimen/dp_20"
-        android:layout_marginLeft="@dimen/dp_40"
-        android:text="@string/str_save"
-        android:layout_marginRight="@dimen/dp_40"
-        style="@style/AppTheme.Button"/>
+        android:layout_toLeftOf="@+id/imgRushLogo"
+        android:layout_height="wrap_content"
+        android:src="@drawable/arrow"/>
+    <ImageView
+        android:id="@+id/imgRushLogo"
+        android:layout_width="wrap_content"
+        android:layout_marginTop="@dimen/dp_20"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_marginLeft="@dimen/dp_20"
+        android:layout_marginRight="@dimen/dp_30"
+        android:src="@drawable/logo_signup"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
 
-</LinearLayout>
+        android:layout_marginLeft="@dimen/dp_40"
+        android:layout_marginRight="@dimen/dp_40"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="@dimen/dp_10"
+        android:orientation="vertical"
+        android:padding="@dimen/dp_5"
+        >
+
+
+        <EditText
+
+
+            android:id="@+id/fuEdtEmail"
+            android:drawableLeft="@drawable/ic_email"
+            android:inputType="textEmailAddress|textNoSuggestions"
+            android:hint="@string/str_email"
+            style="@style/AppTheme.Input"></EditText>
+
+        <EditText
+
+            android:id="@+id/fuEdtPhone"
+            android:layout_marginTop="@dimen/dp_10"
+            android:drawableLeft="@drawable/ic_phone"
+            android:inputType="phone|textNoSuggestions"
+            android:hint="@string/str_phone"
+            style="@style/AppTheme.Input"></EditText>
+
+
+
+        <Button
+            android:id="@+id/fuSaveDetails"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_20"
+            android:text="@string/str_save"
+            style="@style/AppTheme.Button"/>
+    </LinearLayout>
+
+
+
+
+
+
+
+
+
+
+</RelativeLayout>
