Added functionality and UI for currency code (Register screen,update profile,Edit profile)

--- a/app/src/main/res/layout/fragment_update_account.xml
+++ b/app/src/main/res/layout/fragment_update_account.xml
@@ -55,7 +55,11 @@
             android:hint="@string/str_phone"
             style="@style/AppTheme.Input"></EditText>
 
-
+            <include
+                android:layout_width="match_parent"
+                android:layout_marginTop="@dimen/dp_10"
+                android:layout_height="wrap_content"
+                layout="@layout/custom_spinner"/>
 
         <Button
             android:id="@+id/fuSaveDetails"
