--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -266,16 +266,56 @@
                     android:text="edit"
                     android:textSize="@dimen/sp_12"
                     android:padding="@dimen/dp_4"
-                    android:gravity="center"
                     android:layout_alignParentRight="true"
                     android:layout_centerInParent="true"
                     android:textColor="@android:color/white"
                     />
+
+
             </RelativeLayout>
 
 
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dp_20"
+                android:layout_marginTop="@dimen/dp_10"
+                android:layout_marginRight="@dimen/dp_20"
+                android:weightSum="1"
+                android:orientation="horizontal">
 
-</LinearLayout>
+
+                 <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_toLeftOf="@+id/txthideen"
+                android:layout_height="wrap_content">
+                <include
+                    android:id="@+id/includeSpinner"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    layout="@layout/custom_spinner"/>
+            </LinearLayout>
+
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:id="@+id/txthideen"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:text="edit"
+                    android:visibility="invisible"
+                    android:textSize="@dimen/sp_12"
+                    android:padding="@dimen/dp_4"
+                    android:layout_alignParentRight="true"
+
+                    android:textColor="@android:color/white"
+                    />
+
+
+            </RelativeLayout>
+
+
+            </LinearLayout>
 
 
         <LinearLayout
