--- a/app/src/main/res/layout/fragment_payment_methods.xml
+++ b/app/src/main/res/layout/fragment_payment_methods.xml
@@ -60,6 +60,7 @@
         android:layout_marginLeft="@dimen/dp_20"
         android:layout_marginRight="@dimen/dp_20"
         android:hint="@string/str_headline"
+        android:inputType="textNoSuggestions"
         android:padding="@dimen/dp_7"
         android:layout_marginTop="@dimen/dp_10"
         style="@style/AppTheme.Input"/>
@@ -74,14 +75,16 @@
          android:orientation="horizontal"
          >
 
-         <EditText
+         <TextView
              android:layout_width="0sp"
              android:id="@+id/fpEdtExpiry"
              android:layout_height="wrap_content"
-             android:editable="false"
              android:padding="@dimen/dp_7"
+             android:textColor="@android:color/white"
+             android:textStyle="bold|italic"
+             android:textSize="@dimen/sp_16"
              android:layout_weight=".3"
-             style="@style/AppTheme.Input"/>
+             android:background="@drawable/bg_edittext_shape"/>
 
          <TextView
              android:layout_width="0sp"
@@ -124,7 +127,7 @@
          </LinearLayout>
 
 
-    <EditText
+    <!--<EditText
         android:layout_width="match_parent"
         android:id="@+id/fpEdtCountry"
         android:layout_height="wrap_content"
@@ -134,10 +137,10 @@
         android:hint="@string/str_country"
         android:inputType="textNoSuggestions"
         android:layout_marginTop="@dimen/dp_10"
-        style="@style/AppTheme.Input"/>
+        style="@style/AppTheme.Input"/>-->
 
 
-    <EditText
+   <!-- <EditText
         android:layout_width="match_parent"
         android:id="@+id/fpEdtCity"
         android:layout_height="wrap_content"
@@ -147,7 +150,7 @@
         android:hint="@string/str_city"
         android:layout_marginRight="@dimen/dp_20"
         android:layout_marginTop="@dimen/dp_10"
-        style="@style/AppTheme.Input"/>
+        style="@style/AppTheme.Input"/>-->
 
 
     <TextView
