--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -82,11 +82,6 @@
                     style="@style/AppTheme.Input"></EditText>
 
 
-
-
-
-
-
                 <EditText
 
                     android:layout_marginTop="@dimen/dp_10"
@@ -100,6 +95,11 @@
                     style="@style/AppTheme.Input"></EditText>
 
 
+            <include
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_10"
+                layout="@layout/custom_spinner"/>
 
             <Button
                 android:id="@+id/frBtnCreateAccount"
