--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -9,6 +9,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/topRegistration"
         android:layout_marginTop="@dimen/dp_20">
 
 
@@ -242,11 +243,66 @@
                 android:layout_marginLeft="@dimen/dp_20"
                 android:layout_marginTop="@dimen/dp_10"
                 android:layout_marginRight="@dimen/dp_20"
-                android:weightSum="1"
                 android:orientation="horizontal">
 
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_toLeftOf="@+id/editablePhone"
+                    android:orientation="horizontal"
+                    android:background="@drawable/bg_edittext_shape">
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="@dimen/dp_2"
+                        android:src="@drawable/ic_phone"/>
+
                     <EditText
+                        android:layout_width="wrap_content"
+                        android:id="@+id/fEPEdtCC"
+                        android:layout_height="wrap_content"
+                        android:textSize="@dimen/sp_16"
+                        android:layout_marginLeft="2dp"
+                        android:drawablePadding="@dimen/dp_3"
+                        android:singleLine="true"
+                        android:layout_gravity="center_vertical"
+                        android:textColor="@android:color/white"
+                        android:textColorHint="@android:color/white"
+                        android:textStyle="bold|italic"
+                        android:maxLength="3"
+                        android:paddingRight="@dimen/dp_2"
+                        android:paddingBottom="@dimen/dp_3"
+                        android:paddingLeft="@dimen/dp_6"
+                        android:paddingTop="@dimen/dp_3"
+                        android:text="+1"
+                        android:inputType="phone|textNoSuggestions"
+                        android:background="@android:color/transparent"/>
+
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/fEPEdtPhone"
+                        android:textSize="@dimen/sp_16"
+                        android:drawablePadding="@dimen/dp_3"
+                        android:singleLine="true"
+                        android:layout_gravity="center_vertical"
+                        android:textColor="@android:color/white"
+                        android:textColorHint="@android:color/white"
+                        android:textStyle="bold|italic"
+                        android:paddingRight="@dimen/dp_2"
+
+                        android:paddingBottom="@dimen/dp_3"
+                        android:paddingLeft="@dimen/dp_6"
+                        android:paddingTop="@dimen/dp_3"
+                        android:inputType="phone|textNoSuggestions"
+                        android:hint="@string/str_phone"
+                        android:background="@android:color/transparent"
+
+                        ></EditText>
+                </LinearLayout>
+
+                   <!-- <EditText
 
                         android:layout_width="match_parent"
 
@@ -255,7 +311,7 @@
                         android:inputType="phone|textNoSuggestions"
                         android:layout_toLeftOf="@+id/editablePhone"
                         android:hint="@string/str_Number"
-                        style="@style/AppTheme.Input"></EditText>
+                        style="@style/AppTheme.Input"></EditText>-->
 
 
                 <TextView
