--- a/app/src/main/res/layout/fragment_payment_methods.xml
+++ b/app/src/main/res/layout/fragment_payment_methods.xml
@@ -3,6 +3,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clickable="true"
+    android:id="@+id/topLinearPayment"
     android:background="@drawable/bg_app">
 
     <RelativeLayout
