--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -4,11 +4,13 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clickable="true"
+
     android:background="@drawable/bg_app">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/topRegistration"
         android:layout_marginTop="@dimen/dp_10"
         >
 
@@ -82,17 +84,61 @@
                     style="@style/AppTheme.Input"></EditText>
 
 
-                <EditText
+               <LinearLayout
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:orientation="horizontal"
+                   android:layout_marginTop="@dimen/dp_10"
+                   android:background="@drawable/bg_edittext_shape">
+                   <ImageView
+                       android:layout_width="wrap_content"
+                       android:layout_height="wrap_content"
+                       android:padding="@dimen/dp_2"
+                       android:src="@drawable/ic_phone"/>
 
-                    android:layout_marginTop="@dimen/dp_10"
-                    android:id="@+id/frEdtPhone"
+                    <EditText
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/frEdtCC"
+                        android:textSize="@dimen/sp_16"
+                        android:layout_marginLeft="2dp"
+                        android:drawablePadding="@dimen/dp_3"
+                        android:singleLine="true"
+                        android:layout_gravity="center_vertical"
+                        android:textColor="@android:color/white"
+                        android:textColorHint="@android:color/white"
+                        android:textStyle="bold|italic"
+                        android:maxLength="3"
+                        android:paddingRight="@dimen/dp_2"
+                        android:paddingBottom="@dimen/dp_3"
+                        android:paddingLeft="@dimen/dp_6"
+                        android:paddingTop="@dimen/dp_3"
+                        android:text="+1"
+                        android:inputType="phone|textNoSuggestions"
+                        android:background="@android:color/transparent"/>
 
-                    android:drawableLeft="@drawable/ic_phone"
-                    android:inputType="phone|textNoSuggestions"
+                   <EditText
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content"
+                       android:id="@+id/frEdtPhone"
+                       android:textSize="@dimen/sp_16"
+                       android:drawablePadding="@dimen/dp_3"
+                       android:singleLine="true"
+                       android:layout_gravity="center_vertical"
+                       android:textColor="@android:color/white"
+                       android:textColorHint="@android:color/white"
+                       android:textStyle="bold|italic"
+                       android:paddingRight="@dimen/dp_2"
+                       android:paddingBottom="@dimen/dp_3"
+                       android:paddingLeft="@dimen/dp_6"
+                       android:paddingTop="@dimen/dp_3"
+                       android:inputType="phone|textNoSuggestions"
+                       android:hint="@string/str_phone"
+                       android:background="@android:color/transparent"
 
-                    android:hint="@string/str_phone"
+                       ></EditText>
+               </LinearLayout>
 
-                    style="@style/AppTheme.Input"></EditText>
 
 
             <include
