--- a/app/src/main/res/layout/fragment_update_account.xml
+++ b/app/src/main/res/layout/fragment_update_account.xml
@@ -46,14 +46,71 @@
             android:hint="@string/str_email"
             style="@style/AppTheme.Input"></EditText>
 
-        <EditText
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="@dimen/dp_10"
+            android:background="@drawable/bg_edittext_shape">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/dp_2"
+                android:src="@drawable/ic_phone"/>
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/fuEdtCC"
+                android:textSize="@dimen/sp_16"
+                android:layout_marginLeft="2dp"
+                android:drawablePadding="@dimen/dp_3"
+                android:singleLine="true"
+                android:layout_gravity="center_vertical"
+                android:textColor="@android:color/white"
+                android:textColorHint="@android:color/white"
+                android:textStyle="bold|italic"
+                android:maxLength="3"
+                android:paddingRight="@dimen/dp_2"
+                android:paddingBottom="@dimen/dp_3"
+                android:paddingLeft="@dimen/dp_6"
+                android:paddingTop="@dimen/dp_3"
+                android:text="+1"
+                android:inputType="phone|textNoSuggestions"
+                android:background="@android:color/transparent"/>
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/fuEdtPhone"
+                android:textSize="@dimen/sp_16"
+                android:drawablePadding="@dimen/dp_3"
+                android:singleLine="true"
+                android:layout_gravity="center_vertical"
+                android:textColor="@android:color/white"
+                android:textColorHint="@android:color/white"
+                android:textStyle="bold|italic"
+                android:paddingRight="@dimen/dp_2"
+
+                android:paddingBottom="@dimen/dp_3"
+                android:paddingLeft="@dimen/dp_6"
+                android:paddingTop="@dimen/dp_3"
+                android:inputType="phone|textNoSuggestions"
+                android:hint="@string/str_phone"
+                android:background="@android:color/transparent"
+
+                ></EditText>
+        </LinearLayout>
+
+
+        <!-- <EditText
 
             android:id="@+id/fuEdtPhone"
             android:layout_marginTop="@dimen/dp_10"
             android:drawableLeft="@drawable/ic_phone"
             android:inputType="phone|textNoSuggestions"
             android:hint="@string/str_phone"
-            style="@style/AppTheme.Input"></EditText>
+            style="@style/AppTheme.Input"></EditText>-->
 
             <include
                 android:layout_width="match_parent"
