--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#c1413a</color>
     <color name="colorEdtBg">#d27872</color>
     <color name="civ_border">#6c2420</color>
+    <color name="color_accept_reject">#e8503e</color>
 
 </resources>
