--- a/app/src/main/res/layout/view_book_service_payment.xml
+++ b/app/src/main/res/layout/view_book_service_payment.xml
@@ -7,7 +7,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:paddingTop="@dimen/dp_10"
         android:weightSum="1"
         android:paddingBottom="@dimen/dp_10"
@@ -20,6 +20,39 @@
             android:layout_height="wrap_content"
             android:layout_weight=".5"
             android:layout_marginLeft="@dimen/dp_10">
+            <TextView
+                android:id="@+id/txtCurrency"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:textColor="@android:color/white"
+                android:textStyle="bold|italic"
+                android:textSize="@dimen/sp_18"
+                android:text="C$"/>
+
+            <TextView
+                android:id="@+id/txtAmount"
+                android:layout_toRightOf="@+id/txtCurrency"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dp_4"
+                android:textColor="@android:color/white"
+                android:textStyle="bold|italic"
+                android:textSize="@dimen/sp_18"
+                android:text="300"/>
+
+
+            <TextView
+
+                android:layout_toRightOf="@+id/txtCurrency"
+                android:layout_width="wrap_content"
+                android:layout_below="@+id/txtCurrency"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:textColor="@android:color/white"
+                android:textStyle="italic"
+                android:textSize="@dimen/sp_16"
+                android:text="@string/str_value_estimate"/>
 
             </RelativeLayout>
 
@@ -28,12 +61,38 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/dp_10"
             android:layout_weight=".5">
+
+
+            <TextView
+                android:id="@+id/txtEstimatedTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:textColor="@android:color/white"
+                android:textStyle="bold|italic"
+                android:textSize="@dimen/sp_18"
+                android:text="Time"/>
+
+
+
+
+            <TextView
+
+                android:layout_width="wrap_content"
+                android:layout_below="@+id/txtEstimatedTime"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:textColor="@android:color/white"
+                android:textStyle="italic"
+                android:textSize="@dimen/sp_16"
+                android:text="@string/str_value_time"/>
             </RelativeLayout>
 
         </LinearLayout>
 
 
     <RelativeLayout
+        android:id="@+id/viewCardDetails"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:paddingTop="@dimen/dp_10"
@@ -44,6 +103,29 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:id="@+id/imgCardType"
+            android:src="@drawable/visa_icon"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/txtCardNumber"
+            android:layout_toRightOf="@+id/imgCardType"
+            android:textColor="@android:color/white"
+            android:textStyle="bold|italic"
+            android:layout_centerVertical="true"
+            android:textSize="@dimen/sp_16"
+            android:layout_marginRight="@dimen/dp_4"
+            android:text="PERSONAL *********4567"
+            android:layout_toLeftOf="@+id/imgArrow"/>
+
+        <ImageView
+            android:id="@+id/imgArrow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
             android:src="@drawable/ic_drop_down"/>
         </RelativeLayout>
@@ -62,7 +144,9 @@
             android:layout_width="match_parent"
             android:layout_marginLeft="@dimen/dp_40"
             android:layout_marginRight="@dimen/dp_40"
-
+            android:text="@string/str_make_order"
+            android:textColor="@color/colorPrimaryDark"
+            android:textStyle="bold|italic"
             android:background="@drawable/bg_now_btn"
             android:layout_height="wrap_content"/>
 </RelativeLayout>
