--- a/app/src/main/res/layout/custom_toast.xml
+++ b/app/src/main/res/layout/custom_toast.xml
@@ -3,9 +3,10 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:padding="@dimen/dp_6"
+    android:paddingTop="@dimen/dp_10"
+    android:paddingBottom="@dimen/dp_10"
     android:elevation="3dp"
-    android:background="@color/colorPrimaryDark" >
+    android:background="@color/color_custom_toast" >
     <TextView android:id="@+id/text_error_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
