--- a/app/src/main/res/layout/layout_accept_reject.xml
+++ b/app/src/main/res/layout/layout_accept_reject.xml
@@ -3,12 +3,12 @@
     android:orientation="horizontal"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="@dimen/dp_5"
+    android:padding="@dimen/dp_3"
 
     android:background="@drawable/bg_accept_reject">
     <de.hdodenhof.circleimageview.CircleImageView
-     android:layout_width="@dimen/dp_50"
-     android:layout_height="@dimen/dp_50"
+     android:layout_width="@dimen/dp_40"
+     android:layout_height="@dimen/dp_40"
      android:src="@drawable/default_profile_photo"
      />
 
@@ -17,13 +17,13 @@
         android:id="@+id/txtACNow"
         android:layout_marginLeft="@dimen/dp_10"
         android:gravity="center"
-        android:layout_height="@dimen/dp_50"
+        android:layout_height="wrap_content"
         android:padding="@dimen/dp_7"
         android:text="@string/str_now"
         android:minWidth="@dimen/dp_80"
         android:textColor="@color/colorPrimaryDark"
         android:textStyle="bold|italic"
-        android:textSize="@dimen/sp_16"
+
         android:layout_gravity="center_vertical"
         android:background="@drawable/bg_now_btn"/>
      <TextView
@@ -31,13 +31,13 @@
          android:layout_width="wrap_content"
          android:layout_marginLeft="@dimen/dp_7"
          android:gravity="center"
-         android:layout_height="@dimen/dp_50"
+         android:layout_height="wrap_content"
          android:padding="@dimen/dp_10"
          android:text="@string/str_reservation"
          android:minWidth="@dimen/dp_80"
          android:textColor="@android:color/white"
          android:textStyle="bold|italic"
-         android:textSize="@dimen/sp_16"
+
          android:layout_gravity="center_vertical"
          android:background="@drawable/bg_reservation_btn"/>
 
