--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -26,8 +26,8 @@
 
      <ImageView
          android:id="@+id/imgLogo"
-         android:layout_width="60dp"
-         android:layout_height="wrap_content"
+         android:layout_width="35dp"
+         android:layout_height="30dp"
          android:layout_marginRight="@dimen/dp_5"
          android:visibility="visible"
          android:layout_gravity="right|center_vertical"
